--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,84 @@
 aiofiles==0.4.0
 aiohttp==3.6.2
+astroid==2.3.3
+async-timeout==3.0.1
+attrs==18.2.0
+beautifulsoup4==4.9.0
+blis==0.4.1
+Bottleneck==1.3.2
+catalogue==1.0.0
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.1
+click-completion==0.5.2
+click-didyoumean==0.0.3
+click-help-colors==0.8
+colorama==0.3.9
+cryptography==2.9
+cursor==1.3.4
+cycler==0.10.0
+cymem==2.0.3
 fastai==1.0.60
 fastprogress==0.2.3
+gradient==0.6.1
+h11==0.9.0
+halo==0.0.29
+httptools==0.1.1
+idna==2.9
+importlib-metadata==1.6.0
+isort==4.3.21
 Jinja2==2.11.1
+kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
+log-symbols==0.0.14
+MarkupSafe==1.1.1
+marshmallow==2.21.0
+matplotlib==3.2.1
+mccabe==0.6.1
+multidict==4.7.5
+murmurhash==1.0.2
+numexpr==2.7.1
+numpy==1.18.2
+nvidia-ml-py3==7.352.0
+packaging==20.3
+pandas==1.0.3
+Pillow==7.1.1
+plac==1.1.3
+preshed==3.0.2
+progressbar2==3.50.1
+prompt-toolkit==2.0.10
+pycparser==2.20
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-multipart==0.0.5
+python-utils==2.4.0
+pytz==2019.3
+PyYAML==5.3.1
+requests==2.23.0
+requests-toolbelt==0.9.1
+scipy==1.4.1
+shellingham==1.3.2
+six==1.14.0
+soupsieve==2.0
+spacy==2.2.4
+spinners==0.0.24
+srsly==1.0.2
 starlette==0.13.2
+termcolor==1.1.0
+terminaltables==3.1.0
+thinc==7.4.0
 torch==1.4.0
 torchvision==0.5.0
+tqdm==4.45.0
+typed-ast==1.4.1
+urllib3==1.25.8
 uvicorn==0.11.3
+uvloop==0.14.0
+wasabi==0.6.0
+wcwidth==0.1.9
+websockets==8.1
+wrapt==1.11.2
+yarl==1.4.2
+zipp==3.1.0
