--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ MarkupSafe==1.1.1
 marshmallow==2.21.0
 matplotlib==3.2.1
 mccabe==0.6.1
+moesifwsgi=1.2.4
 multidict==4.7.5
 murmurhash==1.0.2
 numexpr==2.7.1
